Fix some swagger description and add README
