# docs/swagger.json
@@ -70,7 +70,7 @@
         },
         "/users/{id}": {
             "get": {
-                "description": "Return a list of users and address",
+                "description": "Return a user and address",
                 "consumes": [
                     "application/json"
                 ],
@@ -80,7 +80,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Return a list of users",
+                "summary": "Return a user",
                 "parameters": [
                     {
                         "type": "integer",
@@ -152,7 +152,7 @@
                 "tags": [
                     "User"
                 ],
-                "summary": "Update a users",
+                "summary": "Update a user",
                 "parameters": [
                     {
                         "type": "integer",
@@ -191,12 +191,6 @@
     "definitions": {
         "dto.AddressInput": {
             "type": "object",
-            "required": [
-                "address",
-                "city",
-                "country",
-                "postcode"
-            ],
             "properties": {
                 "address": {
                     "type": "string"
@@ -243,13 +237,6 @@
         },
         "dto.UserInput": {
             "type": "object",
-            "required": [
-                "address",
-                "age",
-                "email",
-                "name",
-                "password"
-            ],
             "properties": {
                 "address": {
                     "$ref": "#/definitions/dto.AddressInput"
